Fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    width: 100%;
+    min-width: 10vh;
     height: 100vh;
     background-color: #131312;
     font-family: 'Poppins' , sans-serif;
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -34,12 +34,12 @@ header .menu_side, .song_side {
 }
 
 header .song_side {
-    width:85%;
+    min-width:85%;
     background: #0b1320;
 }
 
 header .master_play {
-    width: 100%;
+    min-width: 100%;
     height: 10%;
     background: #111727;
     box-shadow: 0px 3px 8px #090f1f;
@@ -55,8 +55,8 @@ header .menu_side .menu {
     margin:  40px 0px 0px 20px;
 }
 header .menu_side .menu .menu_item {
-    font-size: 15px;
-    width: 90%;
+    font-size: 10px;
+    min-width: 90%;
     height: 2.5em;
     border: 0;
     border-radius: 12px;
@@ -187,7 +187,7 @@ header .master_play img {
     height: 35px;
 }
 header .master_play h5 {
-    width: 130px;
+    min-width: 130px;
     font-size: 13px;
     margin-left: 15px;
     color: #fff;
@@ -200,8 +200,9 @@ header .master_play h5 .subtitle{
 header .master_play .icon{
    font-size: 20px;
    color: #fff;
-   margin: 0px 20px 0px 40px;
+   margin: 0px 10px 0px 20px;
    outline: none;
+   display:inline-flex;
 }
 header .master_play .icon .bi{
  cursor: pointer;
@@ -331,7 +332,7 @@ header .master_play .vol input{
  }
  header .song_side nav{
     width: 90%;
-    height: 10%;
+    height: 20%;
     margin: auto;
     /* border: 1px solid #fff; */
     display: flex;
@@ -367,7 +368,7 @@ header .master_play .vol input{
  }
  header .song_side nav .search{
    position: relative;
-   width: 40%;
+   min-width: 50%;
    padding: 1px 10px;
    border-radius: 20px;
    color: gray;
